# python-bp

./: .gitignore  README.md  pyproject.toml
src/python_bp/: __init__.py  bundle.py  exceptions.py
src/python_bp/admin/: __init__.py  records.py  status_report.py
src/python_bp/blocks/: __init__.py  bundle_age.py  canonical.py  hop_count.py  payload.py  previous_node.py  primary.py
src/python_bp/codec/: __init__.py  cbor.py
src/python_bp/convergence/: __init__.py  adapter.py
src/python_bp/processing/: __init__.py  agent.py  delivery.py  forwarding.py  fragmentation.py  lifecycle.py  reception.py  transmission.py
src/python_bp/services/: __init__.py  application.py  registrations.py
src/python_bp/types/: __init__.py  crc.py  endpoints.py  flags.py  timestamps.py
tests/: __init__.py  test_admin.py  test_blocks.py  test_bundle.py  test_codec.py  test_convergence.py  test_processing.py  test_services.py  test_types.py
