[project]
name = "python-bp"
version = "0.1.0"
description = ""
authors = [
    {name = 'Malaga Space Team',email = 'spaceteam@uma.es'},
    {name = "Diego Toledo",email = "dtoledo@uma.es"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cbor2>=6.1",
]

[tool.poetry]
packages = [{include = "python_bp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
